--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Happy Birthday Anika!</title>
+  <title>Happy 14th Birthday Anika!</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -57,6 +57,7 @@
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Happy Birthday Message:</h2>
           <h3 class="section-subheading text-muted">OK so maybe I'm not fantastic at making phyiscal birthday cards like you (you got the art genese), but that doesn't mean you still not a fool (AKA I love you). You are pretty gret for a younger sister (just dont bring this up later) and everyday you make me proud. You may be younger, but you truly take care of me, which i greatly appreciate (not to say that its more so than how I help you, so hold ur horses). Love you lots - Kushy </h3>
+          <h3 class="section-subheading text-muted">I'm really going to miss you these next 4 years. Seeing you do piano, schoolwork, etc. makes me so proud because of your tenacity and passion. It fills me up with pride. I'm a bit dissapointed I won't be here to see all of your best achievements come into fruition in HS, but dw Ill come visit :p</h3>
           <div class="row text-center">
                   <div class="col-md-4">
                     <span class="fa-stack fa-4x">
